Fix scrollbar bug, Add responsive image demo

--- a/css/styles.css
+++ b/css/styles.css
@@ -497,10 +497,6 @@ section#developers .section-header {
 
 /* Text Pages */
 
-section.text {
-    overflow-x: scroll;
-}
-
 section.text h1 {
 	font-size: 2.0rem;
 	line-height: 3.0rem;
